--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -19,15 +19,15 @@
       <p class="mini-subtitle">Responsive and Reflective of Camden’s Vibrant Culture</p>
       <div class="info-boxes">
         <div class="info-box">
-          <h3>Neon Piping<i class="fas fa-info-circle"></i></h3>
+          <h3><i class="fas fa-info-circle"></i>Neon Piping</h3>
           <p class="info-text">Relatively efficient lighting that is easily shapable</p>
         </div>
         <div class="info-box">
-          <h3>Proximity Sensors<i class="fas fa-info-circle"></i></h3>
+          <h3><i class="fas fa-info-circle"></i>Proximity Sensors</h3>
           <p class="info-text">To save energy, proximity sensors can be used to gradually light up and dim sections of the graffiti depending on movement</p>
         </div>
         <div class="info-box">
-          <h3>Local Collaboration<i class="fas fa-info-circle"></i></h3>
+          <h3><i class="fas fa-info-circle"></i>Local Collaboration</h3>
           <p class="info-text">Existing graffiti and local graffiti artists can help to inspire the designs of the NightLighting</p>
         </div>
       </div>
