--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -36,23 +36,23 @@
 
   <div class="slide">
     <div class="slide-content">
-      <h2 class="slide-title">Slide 2 Title</h2>
-      <p class="slide-subtitle">Slide 2 Subtitle</p>
-      <img class="slide-image" src="image2.jpg" alt="Slide 2 Image">
-      <h3 class="mini-title">Mini Title 2</h3>
-      <p class="mini-subtitle">Mini Subtitle 2</p>
+      <h2 class="slide-title">Living Boathouse</h2>
+      <p class="slide-subtitle">For Regent's Canal</p>
+      <img class="slide-image" src="livingwall.webp" alt="Slide 2 Image">
+      <h3 class="mini-title">An Attractive Living Green Wall</h3>
+      <p class="mini-subtitle">To Attract Biodiversity and Improve Air Quality</p>
       <div class="info-boxes">
         <div class="info-box">
-          <h3>Info Box 1<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 1.</p>
+          <h3>Info Box 1<i class="fas fa-info-circle"></i>Supporting Local bio-life</h3>
+          <p class="info-text">Providing a safe haven for bees, butterflies, and other pollinators, contributing to a healthier ecosystem along the canal.</p>
         </div>
         <div class="info-box">
-          <h3>Info Box 2<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 2.</p>
+          <h3>Info Box 2<i class="fas fa-info-circle"></i>A Blend of Nature and Design</h3>
+          <p class="info-text">A fusion of the Lock's industrial design and the environment in its most organic form</p>
         </div>
         <div class="info-box">
-          <h3>Info Box 3<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 3.</p>
+          <h3>Info Box 3<i class="fas fa-info-circle"></i>A canal-powered irrigation system</h3>
+          <p class="info-text">A self-sustaining irrigation system via the canal conserves water while promoting lush, thriving plant life along the canal</p>
         </div>
       </div>
     </div>
