--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -43,15 +43,15 @@
       <p class="mini-subtitle">To Attract Biodiversity and Improve Air Quality</p>
       <div class="info-boxes">
         <div class="info-box">
-          <h3>Info Box 1<i class="fas fa-info-circle"></i>Supporting Local bio-life</h3>
+          <h3><i class="fas fa-info-circle"></i>Supporting Local Bio-Life</h3>
           <p class="info-text">Providing a safe haven for bees, butterflies, and other pollinators, contributing to a healthier ecosystem along the canal.</p>
         </div>
         <div class="info-box">
-          <h3>Info Box 2<i class="fas fa-info-circle"></i>A Blend of Nature and Design</h3>
+          <h3><i class="fas fa-info-circle"></i>A Blend of Nature and Design</h3>
           <p class="info-text">A fusion of the Lock's industrial design and the environment in its most organic form</p>
         </div>
         <div class="info-box">
-          <h3>Info Box 3<i class="fas fa-info-circle"></i>A canal-powered irrigation system</h3>
+          <h3>i class="fas fa-info-circle"></i>A Canal-Powered Irrigation System</h3>
           <p class="info-text">A self-sustaining irrigation system via the canal conserves water while promoting lush, thriving plant life along the canal</p>
         </div>
       </div>
@@ -60,23 +60,23 @@
 
   <div class="slide">
     <div class="slide-content">
-      <h2 class="slide-title">Slide 3 Title</h2>
-      <p class="slide-subtitle">Slide 3 Subtitle</p>
-      <img class="slide-image" src="image3.jpg" alt="Slide 3 Image">
-      <h3 class="mini-title">Mini Title 3</h3>
-      <p class="mini-subtitle">Mini Subtitle 3</p>
+      <h2 class="slide-title">Bin, Bench & Barge</h2>
+      <p class="slide-subtitle">For Regent's Canal</p>
+      <img class="slide-image" src="canalbin.webp" alt="Slide 3 Image">
+      <h3 class="mini-title">A way to Draw People To Dispose of Rubbish/h3>
+      <p class="mini-subtitle">A Rubbish Bin that Utilises Its Space to  be Sat on</p>
       <div class="info-boxes">
         <div class="info-box">
-          <h3>Info Box 1<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 1.</p>
+          <h3><i class="fas fa-info-circle"></i>Simple Manufactured Design</h3>
+          <p class="info-text">Recylced polyethylene can be moulded into the body shape, whilst a steel lid and narrow wooden beams complete the design</p>
         </div>
         <div class="info-box">
-          <h3>Info Box 2<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 2.</p>
+          <h3><i class="fas fa-info-circle"></i>Made to Last</h3>
+          <p class="info-text">The bench would be anchored into the ground and can fit narrowly along empty space along the canal path</p>
         </div>
         <div class="info-box">
-          <h3>Info Box 3<i class="fas fa-info-circle"></i></h3>
-          <p class="info-text">Some text for info box 3.</p>
+          <h3><i class="fas fa-info-circle"></i>A Fitting Design</h3>
+          <p class="info-text">The rounded corners of the structure give it a barge-like form</p>
         </div>
       </div>
     </div>
