--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -63,7 +63,7 @@
       <h2 class="slide-title">Bin, Bench & Barge</h2>
       <p class="slide-subtitle">For Regent's Canal</p>
       <img class="slide-image" src="canalbin.webp" alt="Slide 3 Image">
-      <h3 class="mini-title">A way to Draw People To Dispose of Rubbish/h3>
+      <h3 class="mini-title">A way to Draw People To Dispose of Rubbish</h3>
       <p class="mini-subtitle">A Rubbish Bin that Utilises Its Space to  be Sat on</p>
       <div class="info-boxes">
         <div class="info-box">
