--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -82,6 +82,30 @@
     </div>
   </div>
 
+<div class="slide">
+    <div class="slide-content">
+      <h2 class="slide-title">Co-Collaborative Fashion</h2>
+      <p class="slide-subtitle">For Regent's Canal</p>
+      <img class="slide-image" src="canalbin.webp" alt="Slide 3 Image">
+      <h3 class="mini-title">Brining together Artists, Designers and Visitors</h3>
+      <p class="mini-subtitle">Active Display Stands Encouraging People to Experiment with Designs</p>
+      <div class="info-boxes">
+        <div class="info-box">
+          <h3><i class="fas fa-info-circle"></i>Public & Interactive Placement</h3>
+          <p class="info-text">Positioned along a pedestrian walkway, engaging passersby in an open-air fashion exhibit</p>
+        </div>
+        <div class="info-box">
+          <h3><i class="fas fa-info-circle"></i>Urban Integration</h3>
+          <p class="info-text">The installation blends into Camden’s creative, countercultural atmosphere, enhancing the street’s artistic appeal</p>
+        </div>
+        <div class="info-box">
+          <h3><i class="fas fa-info-circle"></i>A Fitting Design</h3>
+          <p class="info-text">The T-shirt displays incorporate reflective surfaces for added visual impact</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <a class="prev arrow" onclick="changeSlide(-1)">&#10094;</a>
   <a class="next arrow" onclick="changeSlide(1)">&#10095;</a>
 
