--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -86,7 +86,7 @@
     <div class="slide-content">
       <h2 class="slide-title">Co-Collaborative Fashion</h2>
       <p class="slide-subtitle">For Regent's Canal</p>
-      <img class="slide-image" src="canalbin.webp" alt="Slide 3 Image">
+      <img class="slide-image" src="fashion.webp" alt="Slide 3 Image">
       <h3 class="mini-title">Brining together Artists, Designers and Visitors</h3>
       <p class="mini-subtitle">Active Display Stands Encouraging People to Experiment with Designs</p>
       <div class="info-boxes">
