--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -8,6 +8,18 @@
 </head>
 <body>
 
+<!-- Added Image at the Top -->
+<div class="header">
+    <img src="CamdenCanalWalk.webp" alt="Camden Canal Walk" class="header-image">
+    <p class="header-subtitle">An Enhancement Project for the Regent's Canal at Camden Lock</p>
+</div>
+
+<!-- Added Video Below the Subtitle -->
+<video class="intro-video" autoplay muted loop>
+    <source src="CamdenModel.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+    
 <div class="slider-container">
 
   <div class="slide active">
