--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -10,7 +10,7 @@
 
 <!-- Added Image at the Top -->
 <div class="header">
-    <img src="CamdenCanalWalk.webp" alt="Camden Canal Walk" class="header-image">
+    <img src="CamdenCanalWalk.gif" alt="Camden Canal Walk" class="header-image">
     <p class="header-subtitle">An Enhancement Project for the Regent's Canal at Camden Lock</p>
 </div>
 
