--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Camden Canal Walk</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Active Ageing</title>
+  <link rel="stylesheet" href="../styles.css">
+ <!-- Standard favicon -->
+  <link rel="icon" href="../favicon.png" type="image/png">
 
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" href="../favicon-180x180.png">
+
+  <!-- Optional for higher resolution screens -->
+  <link rel="icon" sizes="32x32" href="../favicon-32x32.png">
+  <link rel="icon" sizes="16x16" href="../favicon-16x16.png">
+  <link rel="icon" sizes="48x48" href="../favicon-48x48.png">
+  <link rel="icon" sizes="96x96" href="../favicon-96x96.png">
+  <link rel="icon" sizes="192x192" href="../favicon-192x192.png">
 </head>
-<body>
+  
+<body class="iot">
+  <div class="loading-screen">
+    <img src="../logos/logo.gif" alt="Loading...">
+</div>
+
+ <!-- Top Banner -->
+<div class="top-banner">
+  <div class="logo">
+    <a href="/" class="logo-link">
+      <img 
+        src="../logos/logo.png" 
+        data-gif="../logos/logo.gif" 
+        data-duration="1520"
+        alt="Logo" 
+        class="logo-img"
+      >
+    </a>
+  </div>
+  <div class="menu">
+    <a href="#Connect">Connect</a>
+  </div>
+</div>
+
+
+  <!-- Page Content -->
 
 <!-- Added Image at the Top -->
 <div class="header">
