--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -187,6 +187,6 @@ function getSlideFromURL() {
     return params.has("slide") ? parseInt(params.get("slide")) : null;
 }
 </script>
-
+<script src="../main.js"></script>
 </body>
 </html>
