--- a/camden-canalwalk/index.html
+++ b/camden-canalwalk/index.html
@@ -100,7 +100,7 @@
           <p class="info-text">A fusion of the Lock's industrial design and the environment in its most organic form</p>
         </div>
         <div class="info-box">
-          <h3>i class="fas fa-info-circle"></i>A Canal-Powered Irrigation System</h3>
+          <h3><i class="fas fa-info-circle"></i>A Canal-Powered Irrigation System</h3>
           <p class="info-text">A self-sustaining irrigation system via the canal conserves water while promoting lush, thriving plant life along the canal</p>
         </div>
       </div>
