--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
 
   <!-- Page Content -->
 <div class="container">
+  <!-- Zeroth Row -->
+  <div class="first-row">
+    <a href="/camden-canalwak" class="column-link">
+      <img src="media/camdencanalwalk.webp" alt="Banner Image" class="banner">
+    </a>
+    <img src="logos/rca.webp" alt="Logo Overlay" class="logo-overlay">
+  </div>
+  <!-- Divider -->
+  <div class="divider"></div>
   <!-- First Row -->
   <div class="first-row">
     <a href="/tension-stool" class="column-link">
