--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   <!-- Page Content -->
 <div class="container">
   <!-- Zeroth Row -->
-  <div class="first-row">
-    <a href="/camden-canalwak" class="column-link">
+  <div class="zero-row">
+    <a href="/camden-canalwalk" class="column-link">
       <img src="media/camdencanalwalk.webp" alt="Banner Image" class="banner">
     </a>
     <img src="logos/rca.webp" alt="Logo Overlay" class="logo-overlay">
