--- a/gingerbread/index.html
+++ b/gingerbread/index.html
@@ -84,7 +84,7 @@
         <div class="swiper-slide">
           <h2 class="year-title">2022 - St Pauls Cathedral</h2>
           <div class="horizontal-images">
-            <img src="../media/stpauls1.webp" alt="Slide 3 Image 1">
+            <img src="../media/stpauls.gif" alt="Slide 3 Image 1">
             <img src="../media/stpauls.webp" alt="Slide 3 Image 2">
           </div>
         </div>
