--- a/gingerbread/index.html
+++ b/gingerbread/index.html
@@ -105,6 +105,19 @@
   </div>
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script>
+    // Initialize Swiper
+   const swiper = new Swiper('.swiper', {
+  slidesPerView: 1, // Show only ONE slide at a time
+  spaceBetween: 20, // Adds spacing between slides
+  loop: true, // Enables infinite scrolling
+  navigation: {
+    nextEl: '.swiper-button-next',
+    prevEl: '.swiper-button-prev',
+  },
+});
+
+  </script>
 
     <script src="../main.js"></script>
 
