--- a/gingerbread/index.html
+++ b/gingerbread/index.html
@@ -47,7 +47,7 @@
   <!-- Link to a slider library, e.g., Swiper -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
-<body>
+<body class="gingerbead">
   <!-- Full-Width Image -->
   <div class="full-width-image-container">
     <img src="../media/gingerbreadtitle.webp" alt="Full Width Image" class="full-width-image">
