--- a/reformeat/index.html
+++ b/reformeat/index.html
@@ -21,7 +21,7 @@
 
 <body class="koth">
   <div class="reform-loading-screen">
-    <img src="../logos/reformload.gif" alt="Loading...">
+    <img src="../logos/reformload.png" alt="Loading...">
   </div>
 
   <!-- Top Banner -->
@@ -30,7 +30,7 @@
       <a href="/" class="reform-logo-link">
         <img 
           src="../logos/logo.png" 
-          data-gif="../logos/reform.gif" 
+          data-gif="../logos/reform.png" 
           data-duration="1520"
           alt="Logo" 
           class="reform-logo-img"
