--- a/reformeat/index.html
+++ b/reformeat/index.html
@@ -21,7 +21,7 @@
 
 <body class="koth">
   <div class="reform-loading-screen">
-    <img src="../logos/reformload.png" alt="Loading...">
+    <img src="../logos/reformload.gif" alt="Loading...">
   </div>
 
   <!-- Top Banner -->
