--- a/reformeat/index.html
+++ b/reformeat/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tension Stool</title>
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="styles.css">
   <!-- Standard favicon -->
   <link rel="icon" href="../favicon.png" type="image/png">
 
@@ -20,20 +20,20 @@
 </head>
 
 <body class="koth">
-  <div class="reform-loading-screen">
+  <div class="loading-screen">
     <img src="../logos/reformload.gif" alt="Loading...">
   </div>
 
   <!-- Top Banner -->
   <div class="top-banner">
     <div class="logo">
-      <a href="/" class="reform-logo-link">
+      <a href="/" class="logo-link">
         <img 
           src="../logos/logo.png" 
           data-gif="../logos/reform.png" 
           data-duration="1520"
           alt="Logo" 
-          class="reform-logo-img"
+          class="logo-img"
         >
       </a>
     </div>
@@ -45,5 +45,5 @@
   <!-- Page Content -->
   
 </body>
-<script src="../main.js"></script>
+<script src="main.js"></script>
 </html>
