--- a/reformeat/index.html
+++ b/reformeat/index.html
@@ -29,7 +29,7 @@
     <div class="logo">
       <a href="/" class="logo-link">
         <img 
-          src="../logos/reformstatic.png" 
+          src="../logos/reformstatic.tiff" 
           data-gif="../logos/reform.png" 
           data-duration="1520"
           alt="Logo" 
