--- a/index.html
+++ b/index.html
@@ -113,8 +113,22 @@
     <!-- Divider -->
     <div class="divider"></div>
 
+<footer class="footer">
+  <div class="footer-content">
+    <img src="../logos/sig.gif" alt="Animated Logo" class="footer-gif">
+    <div class="footer-text">
+      <p>Designed by Benedict Jones</p>
+      <p>Contact: <a href="mailto:benedictjonez@gmail.com">benedictjonez@gmail.com</a></p>
+      <p>Follow me: 
+        <a href="https://www.linkedin.com/in/benjnz" target="_blank">LinkedIn</a> | 
+        <a href="https://github.com/benjnz" target="_blank">GitHub</a>
+      </p>
+    </div>
+  </div>
+</footer>
 
   <!-- Include the JavaScript file at the end of the body -->
   <script src="main.js"></script>
 </body>
+
 </html>
