--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 <footer class="footer">
   <div class="footer-content">
-    <img src="../logos/sig.gif" alt="Animated Logo" class="footer-gif">
+    <img src="../logos/sig.gif" alt="Animated Logo" class="footer-gif" id="footer-gif">
     <div class="footer-text">
       <p>Designed by Benedict Jones</p>
       <p>Contact: <a href="mailto:benedictjonez@gmail.com">benedictjonez@gmail.com</a></p>
