--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <!-- Divider -->
     <div class="divider"></div>
 
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="footer-content">
     <img src="../logos/sig.gif" alt="Animated Logo" class="footer-gif" id="footer-gif">
     <div class="footer-text">
