--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       >
     </div>
     <div class="menu">
-      <a href="#Connect">Connect</a>
+      <a href="/about">About</a>
     </div>
   </div>
 
