--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ben Jones</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles.css">
  <!-- Standard favicon -->
   <link rel="icon" href="favicon.png" type="image/png">
 
@@ -58,3 +58,22 @@
     </div>
   </div>
 </section>
+  <!-- Include the JavaScript file at the end of the body -->
+  <script src="../main.js"></script>
+</body>
+
+  <footer class="footer" id="footer">
+  <div class="footer-content">
+    <img src="../logos/sig.gif" alt="Animated Logo" class="footer-gif" id="footer-gif">
+    <div class="footer-text">
+      <p>Designed by Benedict Jones</p>
+      <p>Contact: <a href="mailto:benedictjonez@gmail.com">benedictjonez@gmail.com</a></p>
+      <p>Follow me: 
+        <a href="https://www.linkedin.com/in/benjnz" target="_blank">LinkedIn</a> | 
+        <a href="https://github.com/benjnz" target="_blank">GitHub</a>
+      </p>
+    </div>
+  </div>
+</footer>
+
+</html>
