--- a/tension-stool/index.html
+++ b/tension-stool/index.html
@@ -37,8 +37,8 @@
         >
       </a>
     </div>
-    <div class="menu">
-      <a href="#Connect">Connect</a>
+   <div class="menu">
+      <a href="/about">About</a>
     </div>
   </div>
 
@@ -89,4 +89,19 @@
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </body>
 <script src="../main.js"></script>
+
+  <footer class="footer" id="footer">
+  <div class="footer-content">
+    <img src="../logos/sig.gif" alt="Animated Logo" class="footer-gif" id="footer-gif">
+    <div class="footer-text">
+      <p>Designed by Benedict Jones</p>
+      <p>Contact: <a href="mailto:benedictjonez@gmail.com">benedictjonez@gmail.com</a></p>
+      <p>Follow me: 
+        <a href="https://www.linkedin.com/in/benjnz" target="_blank">LinkedIn</a> | 
+        <a href="https://github.com/benjnz" target="_blank">GitHub</a>
+      </p>
+    </div>
+  </div>
+</footer>
+
 </html>
