--- a/gingerbread/index.html
+++ b/gingerbread/index.html
@@ -49,13 +49,13 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
   <!-- Full-Width Image -->
-  <div class="full-width-image-container">
+  <div class="gingerbread-full-width-image-container">
     <img src="../media/gingerbreadtitle.webp" alt="Full Width Image" class="full-width-image">
   </div>
 
   <!-- Body Text -->
-  <div class="body-text-container">
-    <p class="body-text">Some gingerbread designs from over the years:</p>
+  <div class="gingerbread-body-text-container">
+    <p class="gingerbread-body-text">Some gingerbread designs from over the years:</p>
   </div>
 
   <!-- Slider Section -->
@@ -65,7 +65,7 @@
         <!-- Slide 1 -->
         <div class="swiper-slide">
           <h2 class="year-title">2024 - Tower Bridge</h2>
-          <div class="vertical-images">
+          <div class="gingerbread-vertical-images">
             <img src="../media/bridgeparts.webp" alt="Slide 1 Image 1">
             <img src="../media/towerbridge.webp" alt="Slide 1 Image 2">
           </div>
@@ -74,7 +74,7 @@
         <!-- Slide 2 -->
         <div class="swiper-slide">
           <h2 class="year-title">2023 - The Eiffel Tower</h2>
-          <div class="horizontal-images">
+          <div class="gingerbread-horizontal-images">
             <img src="../media/eiffel.gif" alt="Slide 2 Image 1">
             <img src="../media/eiffel.webp" alt="Slide 2 Image 2">
           </div>
@@ -83,7 +83,7 @@
         <!-- Slide 3 -->
         <div class="swiper-slide">
           <h2 class="year-title">2022 - St Pauls Cathedral</h2>
-          <div class="horizontal-images">
+          <div class="gingerbread-horizontal-images">
             <img src="../media/stpauls.gif" alt="Slide 3 Image 1">
             <img src="../media/stpauls.webp" alt="Slide 3 Image 2">
           </div>
@@ -92,7 +92,7 @@
         <!-- Slide 4 -->
         <div class="swiper-slide">
           <h2 class="year-title">2021 - Durham Cathedral</h2>
-          <div class="horizontal-images">
+          <div class="gingerbread-horizontal-images">
             <img src="../media/cathedral.webp" alt="Slide 4 Image 1">
             <img src="../media/lightcathedral.webp" alt="Slide 4 Image 2">
           </div>
