--- a/gingerbread/index.html
+++ b/gingerbread/index.html
@@ -59,7 +59,7 @@
   </div>
 
   <!-- Slider Section -->
-  <div class="slider-container">
+  <div class="gingerbread-slider-container">
     <div class="swiper">
       <div class="swiper-wrapper">
         <!-- Slide 1 -->
