--- a/gingerbread/index.html
+++ b/gingerbread/index.html
@@ -50,7 +50,7 @@
 </head>
   <!-- Full-Width Image -->
   <div class="gingerbread-full-width-image-container">
-    <img src="../media/gingerbreadtitle.webp" alt="Full Width Image" class="full-width-image">
+    <img src="../media/gingerbreadtitle.webp" alt="Full Width Image" class="gingerbread-full-width-image">
   </div>
 
   <!-- Body Text -->
