--- a/microprints/index.html
+++ b/microprints/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KOTH</title>
+  <title>Micro 3D Printing</title>
   <link rel="stylesheet" href="../styles.css">
  <!-- Standard favicon -->
   <link rel="icon" href="../favicon.png" type="image/png">
