--- a/microprints/index.html
+++ b/microprints/index.html
@@ -57,7 +57,7 @@
     </p>
     
    <!-- Read Paper Button -->
-<button class="read-paper-btn" onclick="openPDF()">Read Paper</button>
+<button class="read-paper-btn" onclick="openPDF()">Read Report</button>
 </div>
 
         <!-- Right Section (Video) -->
