--- a/civil-design/index.html
+++ b/civil-design/index.html
@@ -1,1 +1,97 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KOTH</title>
+  <link rel="stylesheet" href="../styles.css">
+ <!-- Standard favicon -->
+  <link rel="icon" href="../favicon.png" type="image/png">
 
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" href="../favicon-180x180.png">
+
+  <!-- Optional for higher resolution screens -->
+  <link rel="icon" sizes="32x32" href="../favicon-32x32.png">
+  <link rel="icon" sizes="16x16" href="../favicon-16x16.png">
+  <link rel="icon" sizes="48x48" href="../favicon-48x48.png">
+  <link rel="icon" sizes="96x96" href="../favicon-96x96.png">
+  <link rel="icon" sizes="192x192" href="../favicon-192x192.png">
+</head>
+  
+<body class="micro">
+  <div class="loading-screen">
+    <img src="../logos/logo.gif" alt="Loading...">
+</div>
+
+ <!-- Top Banner -->
+<div class="top-banner">
+  <div class="logo">
+    <a href="/" class="logo-link">
+      <img 
+        src="../logos/logo.png" 
+        data-gif="../logos/logo.gif" 
+        data-duration="1520"
+        alt="Logo" 
+        class="logo-img"
+      >
+    </a>
+  </div>
+  <div class="menu">
+      <a href="/about">About</a>
+    </div>
+</div>
+
+
+  <!-- Page Content -->
+
+   <header>
+        <img src="title.png" alt="Civil Design Title" class="civil-title-image">
+        <h2 class="subheading">Innovative Civil Engineering Solutions</h2>
+    </header>
+    
+    <main>
+        <div class="civil-pdf-container">
+            <div class="pdf-box">
+                <img src="civildesign.png" alt="Civil Design" class="civil-pdf-thumbnail">
+                <button class="read-button">Read Report</button>
+                <p class="pdf-caption">Civil Design of a River Retaining Wall</p>
+                            <div class="drawings-container">
+                    <img src="drawing1.png" alt="Drawing 1" class="drawing-thumbnail">
+                    <img src="drawing2.png" alt="Drawing 2" class="drawing-thumbnail">
+                </div>
+            </div>
+            <div class="pdf-box">
+                <img src="surveying.png" alt="Surveying" class="civil-pdf-thumbnail">
+                <button class="read-button">Read Report</button>
+                <p class="pdf-caption">A Levelling Survey Report of a section of the River Weir</p>
+            </div>
+            <div class="pdf-box">
+                <img src="siteinvestigation.png" alt="Site Investigation" class="civil-pdf-thumbnail">
+                <button class="read-button">Read Report</button>
+                <p class="pdf-caption">Site Investigation into the Design of an Amusement Park in Riverside Park, Newcastle</p>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
+
+
+   <footer class="footer" id="footer">
+  <div class="footer-content">
+    <img src="../logos/sig.gif" alt="Animated Logo" class="footer-gif" id="footer-gif">
+    <div class="footer-text">
+      <p>Designed by Benedict Jones</p>
+      <p>Contact: <a href="mailto:benedictjonez@gmail.com">benedictjonez@gmail.com</a></p>
+      <p>Follow me: 
+        <a href="https://www.linkedin.com/in/benjnz" target="_blank">LinkedIn</a> | 
+        <a href="https://github.com/benjnz" target="_blank">GitHub</a>
+      </p>
+    </div>
+  </div>
+</footer>
+
+    <script src="../main.js"></script>
+
+</body>
+</html>
