--- a/civil-design/index.html
+++ b/civil-design/index.html
@@ -44,37 +44,33 @@
 
 
   <!-- Page Content -->
-
-   <header>
-        <img src="title.png" alt="Civil Design Title" class="civil-title-image">
-        <h2 class="subheading">Innovative Civil Engineering Solutions</h2>
-    </header>
-    
-    <main>
-        <div class="civil-pdf-container">
-            <div class="pdf-box">
-                <img src="civildesign.png" alt="Civil Design" class="civil-pdf-thumbnail">
-                <button class="read-button">Read Report</button>
-                <p class="pdf-caption">Civil Design of a River Retaining Wall</p>
-                            <div class="drawings-container">
-                    <img src="drawing1.png" alt="Drawing 1" class="drawing-thumbnail">
-                    <img src="drawing2.png" alt="Drawing 2" class="drawing-thumbnail">
-                </div>
-            </div>
-            <div class="pdf-box">
-                <img src="surveying.png" alt="Surveying" class="civil-pdf-thumbnail">
-                <button class="read-button">Read Report</button>
-                <p class="pdf-caption">A Levelling Survey Report of a section of the River Weir</p>
-            </div>
-            <div class="pdf-box">
-                <img src="siteinvestigation.png" alt="Site Investigation" class="civil-pdf-thumbnail">
-                <button class="read-button">Read Report</button>
-                <p class="pdf-caption">Site Investigation into the Design of an Amusement Park in Riverside Park, Newcastle</p>
-            </div>
+  <header>
+<img src="../media/civildesign.webp" alt="Civil Design Title" class="civil-title-image">
+<h2 class="subheading">Innovative Civil Engineering Solutions</h2>
+</header>
+  
+<div class="civil-pdf-container">
+    <div class="civil-pdf-box">
+        <img src="../media/civildesign.png" alt="Civil Design" class="civil-pdf-thumbnail">
+        <a href="../civildesign.pdf" class="read-button" target="_blank">Read Report</a>
+        <p class="pdf-caption">Civil Design of a River Retaining Wall</p>
+        <div class="drawings-container">
+            <img src="../media/drawing1.png" alt="Drawing 1" class="drawing-thumbnail">
+            <img src="../media/drawing2.png" alt="Drawing 2" class="drawing-thumbnail">
         </div>
-    </main>
-</body>
-</html>
+    </div>
+    <div class="civil-pdf-box">
+        <img src="../media/surveying.png" alt="Surveying" class="civil-pdf-thumbnail">
+        <a href="../surveying.pdf" class="read-button" target="_blank">Read Report</a>
+        <p class="pdf-caption">A Levelling Survey Report of a section of the River Weir</p>
+    </div>
+    <div class="civil-pdf-box">
+        <img src="../media/siteinvestigation.png" alt="Site Investigation" class="civil-pdf-thumbnail">
+        <a href="../siteinvestigation.pdf" class="read-button" target="_blank">Read Report</a>
+        <p class="pdf-caption">Site Investigation into the Design of an Amusement Park in Riverside Park, Newcastle</p>
+    </div>
+</div>
+
 
 
    <footer class="footer" id="footer">
