--- a/civil-design/index.html
+++ b/civil-design/index.html
@@ -55,8 +55,8 @@
         <a href="../civildesign.pdf" class="read-button" target="_blank">Read Report</a>
         <p class="pdf-caption">Civil Design of a River Retaining Wall</p>
         <div class="drawings-container">
-            <img src="../media/drawing1.png" alt="Drawing 1" class="drawing-thumbnail">
-            <img src="../media/drawing2.png" alt="Drawing 2" class="drawing-thumbnail">
+            <img src="../media/drawing1.pdf" alt="Drawing 1" class="drawing-thumbnail">
+            <img src="../media/drawing2.pdf" alt="Drawing 2" class="drawing-thumbnail">
         </div>
     </div>
     <div class="civil-pdf-box">
