--- a/civil-design/index.html
+++ b/civil-design/index.html
@@ -52,8 +52,8 @@
 <div class="civil-pdf-container">
     <div class="civil-pdf-box">
         <img src="../media/civildesign.png" alt="Civil Design" class="civil-pdf-thumbnail">
-        <a href="../civildesign.pdf" class="read-button" target="_blank">Read Report</a>
-        <p class="pdf-caption">Civil Design of a River Retaining Wall</p>
+        <a href="../civildesign.pdf" class="civil-read-button" target="_blank">Read Report</a>
+        <p class="civil-pdf-caption">Civil Design of a River Retaining Wall</p>
         <div class="drawings-container">
             <img src="../media/drawing1.pdf" alt="Drawing 1" class="drawing-thumbnail">
             <img src="../media/drawing2.pdf" alt="Drawing 2" class="drawing-thumbnail">
@@ -61,13 +61,13 @@
     </div>
     <div class="civil-pdf-box">
         <img src="../media/surveying.png" alt="Surveying" class="civil-pdf-thumbnail">
-        <a href="../surveying.pdf" class="read-button" target="_blank">Read Report</a>
-        <p class="pdf-caption">A Levelling Survey Report of a section of the River Weir</p>
+        <a href="../surveying.pdf" class="civil-read-button" target="_blank">Read Report</a>
+        <p class="civil-pdf-caption">A Levelling Survey Report of a section of the River Weir</p>
     </div>
     <div class="civil-pdf-box">
         <img src="../media/siteinvestigation.png" alt="Site Investigation" class="civil-pdf-thumbnail">
-        <a href="../siteinvestigation.pdf" class="read-button" target="_blank">Read Report</a>
-        <p class="pdf-caption">Site Investigation into the Design of an Amusement Park in Riverside Park, Newcastle</p>
+        <a href="../siteinvestigation.pdf" class="civil-read-button" target="_blank">Read Report</a>
+        <p class="civil-pdf-caption">Site Investigation into the Design of an Amusement Park in Riverside Park, Newcastle</p>
     </div>
 </div>
 
