--- a/civil-design/index.html
+++ b/civil-design/index.html
@@ -44,33 +44,53 @@
 
 
   <!-- Page Content -->
-  <header>
-<img src="../media/civildesign.webp" alt="Civil Design Title" class="civil-title-image">
-<h2 class="subheading">Innovative Civil Engineering Solutions</h2>
-</header>
-  
-<div class="civil-pdf-container">
-    <div class="civil-pdf-box">
-        <img src="../media/civildesign.png" alt="Civil Design" class="civil-pdf-thumbnail">
-        <a href="../civildesign.pdf" class="civil-read-button" target="_blank">Read Report</a>
-        <p class="civil-pdf-caption">Civil Design of a River Retaining Wall</p>
-        <div class="drawings-container">
-            <img src="../drawing1.pdf" alt="Drawing 1" class="drawing-thumbnail">
-            <img src="../drawing2.pdf" alt="Drawing 2" class="drawing-thumbnail">
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Civil Design Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Page Content -->
+    <header>
+        <img src="../media/civildesign.webp" alt="Civil Design Title" class="civil-title-image">
+        <h2 class="subheading">Innovative Civil Engineering Solutions</h2>
+    </header>
+
+    <div class="civil-pdf-container">
+        <!-- First PDF Box -->
+        <div class="civil-pdf-box">
+            <img src="../media/civildesign.png" alt="Civil Design" class="civil-pdf-thumbnail">
+            <a href="../civildesign.pdf" class="civil-read-button" target="_blank">Read Report</a>
+            <p class="civil-pdf-caption">Civil Design of a River Retaining Wall</p>
+            <div class="civil-drawings-container">
+                <img src="../media/drawing1.png" alt="Drawing 1" class="civil-drawing-thumbnail">
+                <img src="../media/drawing2.png" alt="Drawing 2" class="civil-drawing-thumbnail">
+            </div>
+        </div>
+
+        <!-- Second PDF Box -->
+        <div class="civil-pdf-box">
+            <img src="../media/surveying.png" alt="Surveying" class="civil-pdf-thumbnail">
+            <a href="../surveying.pdf" class="civil-read-button" target="_blank">Read Report</a>
+            <p class="civil-pdf-caption">A Levelling Survey Report of a Section of the River Weir</p>
+        </div>
+
+        <!-- Third PDF Box -->
+        <div class="civil-pdf-box">
+            <img src="../media/siteinvestigation.png" alt="Site Investigation" class="civil-pdf-thumbnail">
+            <a href="../siteinvestigation.pdf" class="civil-read-button" target="_blank">Read Report</a>
+            <p class="civil-pdf-caption">Site Investigation into the Design of an Amusement Park in Riverside Park, Newcastle</p>
         </div>
     </div>
-    <div class="civil-pdf-box">
-        <img src="../media/surveying.png" alt="Surveying" class="civil-pdf-thumbnail">
-        <a href="../surveying.pdf" class="civil-read-button" target="_blank">Read Report</a>
-        <p class="civil-pdf-caption">A Levelling Survey Report of a section of the River Weir</p>
-    </div>
-    <div class="civil-pdf-box">
-        <img src="../media/siteinvestigation.png" alt="Site Investigation" class="civil-pdf-thumbnail">
-        <a href="../siteinvestigation.pdf" class="civil-read-button" target="_blank">Read Report</a>
-        <p class="civil-pdf-caption">Site Investigation into the Design of an Amusement Park in Riverside Park, Newcastle</p>
-    </div>
-</div>
 
+    <!-- Fullscreen Overlay for Drawings -->
+    <div id="fullscreen-overlay" class="hidden">
+        <img id="fullscreen-image" src="" alt="Fullscreen Drawing">
+        <button id="close-fullscreen">Close</button>
+    </div>
 
 
    <footer class="footer" id="footer">
