--- a/civil-design/index.html
+++ b/civil-design/index.html
@@ -19,7 +19,7 @@
   <link rel="icon" sizes="192x192" href="../favicon-192x192.png">
 </head>
   
-<body class="micro">
+<body class="civil">
   <div class="loading-screen">
     <img src="../logos/logo.gif" alt="Loading...">
 </div>
