--- a/civil-design/index.html
+++ b/civil-design/index.html
@@ -56,20 +56,22 @@
     <!-- Page Content -->
     <header>
         <img src="../media/civildesign.webp" alt="Civil Design Title" class="civil-title-image">
-        <h2 class="subheading">Innovative Civil Engineering Solutions</h2>
+        <h2 class="subheading">Civil Engineering Design Reports</h2>
     </header>
 
     <div class="civil-pdf-container">
         <!-- First PDF Box -->
         <div class="civil-pdf-box">
-            <img src="../media/civildesign.png" alt="Civil Design" class="civil-pdf-thumbnail">
-            <a href="../civildesign.pdf" class="civil-read-button" target="_blank">Read Report</a>
-            <p class="civil-pdf-caption">Civil Design of a River Retaining Wall</p>
-            <div class="civil-drawings-container">
-                <img src="../media/drawing1.png" alt="Drawing 1" class="civil-drawing-thumbnail">
-                <img src="../media/drawing2.png" alt="Drawing 2" class="civil-drawing-thumbnail">
-            </div>
-        </div>
+    <div class="civil-pdf-content">
+        <img src="../media/civildesign.png" alt="Civil Design" class="civil-pdf-thumbnail">
+        <a href="../civildesign.pdf" class="civil-read-button" target="_blank">Read Report</a>
+        <p class="civil-pdf-caption">Civil Design of a River Retaining Wall</p>
+    </div>
+    <div class="civil-drawings-container">
+        <img src="../media/drawing1.png" alt="Drawing 1" class="civil-drawing-thumbnail">
+        <img src="../media/drawing2.png" alt="Drawing 2" class="civil-drawing-thumbnail">
+    </div>
+</div>
 
         <!-- Second PDF Box -->
         <div class="civil-pdf-box">
