--- a/civil-design/index.html
+++ b/civil-design/index.html
@@ -90,9 +90,9 @@
     </div>
 
     <!-- Fullscreen Overlay for Drawings -->
-    <div id="fullscreen-overlay" class="hidden">
-        <img id="fullscreen-image" src="" alt="Fullscreen Drawing">
-        <button id="close-fullscreen">Close</button>
+    <div id="civil-fullscreen-overlay" class="civil-hidden">
+        <img id="civil-fullscreen-image" src="" alt="Fullscreen Drawing">
+        <button id="civil-close-fullscreen">Close</button>
     </div>
 
 
