--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 
   <!-- Page Content -->
 <div class="container">
+  <!-- Minus one Row -->
+  <div class="m-one-row">
+    <a href="www.reformeat.com" class="column-link">
+      <img src="media/reformeat.webp" alt="Banner Image" class="banner">
+    </a>
+    <img src="logos/rca.webp" alt="Logo Overlay" class="logo-overlay">
+  </div>
   <!-- Zeroth Row -->
   <div class="zero-row">
     <a href="/camden-canalwalk" class="column-link">
